--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
             <artifactId>easysui-common</artifactId>
             <version>${easysui.version}</version>
         </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.10.2</version>
+        </dependency>
         <!--zookeeper start-->
         <dependency>
             <groupId>com.101tec</groupId>
